--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/ghpages/favicon.ico" />
+    <link rel="icon" href="/ghteam/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="manifest" href="/ghpages/manifest.json" />
+    <link rel="manifest" href="/ghteam/manifest.json" />
     <title>React Redux App</title>
-    <script defer="defer" src="/ghpages/static/js/main.8e5cb79d.js"></script>
-    <link href="/ghpages/static/css/main.0315999d.css" rel="stylesheet">
+    <script defer="defer" src="/ghteam/static/js/main.8e5cb79d.js"></script>
+    <link href="/ghteam/static/css/main.0315999d.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
